--- a/ArrayETiposGenericos/ByteBank.SistemaAgencia/ByteBank.SistemaAgencia.csproj
+++ b/ArrayETiposGenericos/ByteBank.SistemaAgencia/ByteBank.SistemaAgencia.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Estagiario.cs" />
+    <Compile Include="Lista.cs" />
     <Compile Include="ListaDeContaCorrente.cs" />
     <Compile Include="ListaDeObject.cs" />
     <Compile Include="Program.cs" />
